Second pass including genotype and schema rebuild
