# schema/vdjbase-api-openapi3.yaml
@@ -1,6 +1,7 @@
 openapi: 3.0.0
 
-# After generating model.py from the schema, please replace all occurrences of __root__ with field_value to ensure the code runs correctly.
+# to generate: datamodel-codegen  --input vdjbase-api-openapi3.yaml --input-file-type openapi --output new_model.py --output-model-type pydantic_v2.BaseModel --strict-nullable --use-subclass-enum
+# After generating model.py from the schema, please replace all occurrences of AwareDateTime with NaiveDateTime
 # Check the existing model.py for other fixups that may be required
 
 info:
@@ -75,7 +76,7 @@ components:
                     type: string        # The VDJbase dataset (e.g. IGH)
             
     # the response object for sample metadata
-    sample_genotype_response:
+    subject_genotype_response:
       type: object
       properties:
         Repertoire: 
@@ -189,7 +190,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/error_response'
                 
-  /{type}/sample_genotype/{species}/{dataset}/{subject}/{sample}:
+  /{type}/subject_genotype/{species}/{subject}:
     get:
       summary: Return the genotype for the sample
       parameters:
@@ -204,31 +205,19 @@ paths:
           required: true
           schema:
             type: string         # binomial name of species
-        - name: dataset
-          in: path
-          required: true
-          schema:
-            type: string
-          description: The VDJbase dataset name
         - name: subject
           in: path
           required: true
           schema:
             type: string
           description: The VDJbase subject name
-        - name: sample
-          in: path
-          required: true
-          schema:
-            type: string
-          description: The VDJbase sample name
       responses:
         '200':
           description: A list of subjects and samples in the specified dataset.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/sample_genotype_response'
+                $ref: '#/components/schemas/subject_genotype_response'
         '500':
           description: Server error
           content:
